--- a/gea/templates/gea/doc/solic.html
+++ b/gea/templates/gea/doc/solic.html
@@ -92,7 +92,7 @@
       <tr style="height: 80px">
         <td></td>
         <td>{{ p.persona.apellidos }}<br>{{ p.persona.nombres }}<br>{% if p.partes_indivisas_propias %}<small>({{ p.partes_indivisas_propias }}/{{ p.partes_indivisas_total }} partes indivisas)</small>{% endif %}</td>
-        <td>{% if p.persona.documento %}{% if p.persona.show_tipo_doc %}{{ p.persona.show_tipo_doc }}: {% endif %}{{ p.persona.documento }}{% endif %}</td>
+        <td>{% if p.persona.documento %}{% if p.persona.get_tipo_doc_display %}{{ p.persona.get_tipo_doc_display }}: {% endif %}{{ p.persona.documento }}{% endif %}</td>
         <td style="text-align: right">{{ p.persona.cuit_cuil }}</td>
       </tr>
     {% endfor %}
