--- a/gea/templates/gea/persona_detail.html
+++ b/gea/templates/gea/persona_detail.html
@@ -18,8 +18,8 @@
                 <td>{{ object.domicilio }}</td>
             </tr>
             <tr>
-                <th class="col-md-3 text-right">Teléfono / Celular</th>
-                <td>{{ object.telefono }} / {{ object.celular }}</td>
+                <th class="col-md-3 text-right">Teléfono</th>
+                <td>{{ object.telefono }}</td>
             </tr>
             <tr>
                 <th class="col-md-3 text-right">Documento</th>
