--- a/gea/templates/gea/doc/visac_form.html
+++ b/gea/templates/gea/doc/visac_form.html
@@ -1,18 +1,17 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
-{% block title %}GEA | Solicitud de Visación{% endblock %}
+{% block title %}Solicitud de Visación{% endblock %}
 
-{% block content %}
-<form class="form-horizontal col-lg-6" method="post">{% csrf_token %}
-  <legend><i class="fas fa-fw fa-sticky-note"></i> Generar Solicitud de Visación</legend>
-  <fieldset>
-    <div class="form-group">
-      <table class="table table-condensed table-hover">
-      {{ form.as_table }}
-      </table>
-      <button type="submit" class="btn btn-primary pull-right">Generar Nota</button>
-    </div>
-  </fieldset>
-</form>
+{% block page-title %}
+<i class="fas fa-fw fa-sticky-note"></i>
+Generar Solicitud de Visación
 {% endblock %}
 
+{% block content %}
+<div class="card shadow mb-4 col-lg-6" style="background-color: #e9ecef;">
+  <div class="card-body">
+    {% crispy form %}
+  </div>
+</div>
+{% endblock %}
