Some comment about CSS includes
Signed-off-by: Santiago Pestarini <santiagonob@gmail.com>

--- a/gea/templates/base.html
+++ b/gea/templates/base.html
@@ -9,7 +9,7 @@
   <title>GEA | {% block title %}Base{% endblock title %}</title>
 
   {% block css %}
-  <!-- Bootstrap CSS // Hackerthemes -->
+  <!-- Bootstrap CSS -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
   <!-- Fontawesome CDN -->
