Add shadow to button
Signed-off-by: Santiago Pestarini <santiagonob@gmail.com>

--- a/gea/templates/gea/persona_list.html
+++ b/gea/templates/gea/persona_list.html
@@ -6,10 +6,9 @@
 Personas
 {% endblock %}
 {% block page-heading-buttons %}
-<div class="btn-group">
+<div class="btn-group shadow">
   <a href="{% url 'persona_create' %}" class="btn btn-success">
-    <i class="fas fa-user-plus fa-fw"></i>
-    Agregar
+    <i class="fas fa-fw fa-user-plus"></i> Agregar
   </a>
 </div>
 {% endblock %}
